crates/ferrotype/tests/compile_fail/empty_enum.stderr
error: Cannot derive TypeScript for empty enum
 --> tests/compile_fail/empty_enum.rs:5:10
  |
5 | #[derive(TypeScript)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `TypeScript` (in Nightly builds, run with -Z macro-backtrace for more info)
